--- a/Computer_Vision_Java/.classpath
+++ b/Computer_Vision_Java/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Prof.Marcos/Desktop/Tools/Bibliotecas_Padrão/javacpp.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Prof.Marcos/Desktop/Tools/Bibliotecas_Padrão/javacv.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prof.Marcos/Desktop/Tools/Aula_CV/Computer_Vision_Java/standard_libraries/javacpp.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prof.Marcos/Desktop/Tools/Aula_CV/Computer_Vision_Java/standard_libraries/javacv.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
